# conic_research_sympy

./: .gitignore  .pre-commit-check-docs.sh  .pre-commit-config.yaml  AGENTS.md  README.md  asymptote_conic.py  conic_from_focus_and_directrix.py  director_circle.py  ellipse_from_params.py  focus_directrix_eccentricity.py  homography_from_samples.py  ideal_points.py  parabola_axes.py  parabola_axis.py  polar_conic_center.py  polar_conic_curvature_sign.py  pydoc-markdown.yml  pyproject.toml  requirements.txt  scale_conic_from_center.py  steiner_ellipse.py
.agent/rules/: AGENTS.md
docs/: api.md
lib/: central_conic.py  circle.py  conic.py  conic_classification.py  degenerate_conic.py  distance.py  ellipse.py  intersection.py  line.py  matrix.py  point.py  polar_conic.py  transform.py
scripts/: check_docstring_refs.py  run_all_research_scripts.sh
src/lib/: central_conic.py  circle.py  conic.py  conic_classes.py  conic_classification.py  conic_direction.py  degenerate_conic.py  distance.py  ellipse.py  hyperbola.py  incidence.py  intersection.py  line.py  matrix.py  parabola.py  point.py  polar_conic.py  sympy_utils.py  transform.py  transform_classes.py
src/research/: adjugate_identities.py  adjugate_properties.py  angle_bisector.py  asymptote_angle.py  asymptote_conic.py  cocircularity.py  conconicity.py  conic_center.py  conic_from_foci_and_point.py  conic_from_foci_and_radius.py  conic_from_focus_and_directrix.py  conic_line_containment.py  conic_radii.py  conic_radius_at_direction.py  det_benchmark.py  director_circle.py  eigenvalue_identities_2x2.py  ellipse_from_foci_and_point.py  ellipse_from_params.py  focal_parameter.py  focus_directrix_eccentricity.py  homography_from_samples.py  ideal_points.py  linear_eccentricity_radii_relationship.py  parabola_axis.py  parabola_center.py  parabola_identities.py  parabola_vertex.py  polar_conic_center.py  polar_conic_curvature_sign.py  polar_conic_intersection_of_secants.py  polar_conic_point_incidence.py  reflection_matrix.py  rotate_points_along_polar_conic.py  run-all.sh  scale_conic_from_center.py  steiner_ellipse.py  sympy_utils.py  util.py
src/research/conic_properties/: asymptote_angle.py  conic_radii.py  focal_axis_angle_identities.py  focus_directrix_eccentricity.py  ideal_points.py  parabola_center.py  polar_conic_center.py  polar_conic_intersection_of_secants.py  polar_conic_tangents.py
src/research/construction/: angle_bisector.py  conic_from_foci_and_radius.py  director_circle.py  ellipse_from_params.py  polar_ellipse.py  polar_hyperbola.py
src/research/incidence/: cocircularity.py  conconicity.py  conic_line_containment.py
src/research/matrices/: det_benchmark.py  eigenvalue_identities_2x2.py
src/research/transformation/: ellipse_to_hyperbola.py  scale_conic_from_center.py
tests/: central_conic_test.py  circle_test.py  conic_classes_test.py  conic_classification_test.py  conic_direction_test.py  conic_test.py  degenerate_conic_test.py  distance_test.py  ellipse_test.py  hyperbola_test.py  incidence_test.py  intersection_test.py  line_test.py  matrix_test.py  parabola_test.py  point_test.py  polar_conic_test.py  transform_classes_test.py  transform_test.py  util.py  utils.py
