[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conic_research_sympy"
version = "0.0.1"
dependencies = [
    "sympy==1.14"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff"
]

[tool.ruff]
select = [
  "E501",  # line length
  "T201",  # print statements
  "TID251",  # banned API usage
]

[tool.ruff.per-file-ignores]
"src/research/*.py" = ["T201", "TID251"]   

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"sympy.pprint".msg = "Do not use sympy.pprint outside src/research"
