[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conic_research_sympy"
version = "0.0.1"
dependencies = [
    "sympy==1.14"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pydoc-markdown",
    "pytest",
    "ruff"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "D100",  # Missing module docstring
  "D102",  # Missing method docstring
  "D103",  # Missing function docstring
  "D104",  # Missing package docstring
  "D203",  # Incorrect blank line before class
  "D205",  # Blank line required after summary line
  "D213",  # Multi-line docstring should start at the second line
  "D400",  # Missing summary punctuation
  "D401",  # First line of docstring should be imperative
  "D415",  # Missing closing punctuation
  "EM101",  # Exception message should be a variable, not a raw string
  "ERA001",  # Commented-out code
  "N802",  # Function name should be lowercase
  "PLR0913",  # Too many arguments
  "PLR2004",  # Magic value used in comparison
  "RUF002",  # Ambiguous Unicode character in docstring
  "RUF003",  # Ambiguous Unicode character in comment
  "TRY003",  # Use Exception subclasses instead of messages
]

[tool.ruff.lint.per-file-ignores]
"src/research/*.py" = [
  "T201",  # print statement
  "TID251",  # banned API (configured below)
]
"tests/*.py" = [
  "ANN201",  # Missing return type annotation
  "D101",  # Missing function docstring
  "S101",  # Use of `assert` detected
]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"sympy.pprint".msg = "Do not use sympy.pprint outside src/research"
